--- a/.plzconfig
+++ b/.plzconfig
@@ -21,7 +21,7 @@ DefaultValue = python3
 
 [PluginConfig "pex_tool"]
 ConfigKey = PexTool
-DefaultValue = //tools/please_pex
+DefaultValue = //tools:please_pex
 
 [PluginConfig "interpreter_options"]
 ConfigKey = InterpreterOptions
