--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: build
-        run: ./pleasew build //tools/...
+        run: ./pleasew build //package:release_files
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
