--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -28,7 +28,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: build
+      - name: Test
+        run: ./pleasew test //test/release_remote_files/...
+      - name: Build
         run: ./pleasew build //package:release_files
       - name: Release
         env:
