--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
-        run: ./pleasew test //test/release_remote_files/...
+        run: ./pleasew test //test/release_remote_files:please_pex_remote_hashes
       - name: Build
         run: ./pleasew build //package:release_files
       - name: Release
