Generate cross compiled release files and make sure that release remote files have the right hashes (#44)
* Generate cross compiled release files and make sure that release remote files have the right hashes

* Fixes

* Bump plz

* Fix

--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -28,8 +28,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: build
-        run: ./pleasew build //tools/...
+      - name: Test
+        run: ./pleasew test //test/release_remote_files:please_pex_remote_hashes
+      - name: Build
+        run: ./pleasew build //package:release_files
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
