--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -1,8 +1,13 @@
 subinclude("//build_defs:python")
 
-filegroup(
+python_binary(
     name = "wheel_resolver",
-    srcs = ["//tools/wheel_resolver/src:wheel_resolver"],
+    main = "resolve.py",
+    deps = [
+        "//third_party/python:argparse",
+        "//third_party/python:distlib",
+        "//third_party/python:packaging",
+        "//tools/wheel_resolver/wheel_tags:tags",
+    ],
     visibility = ["PUBLIC"],
-    labels = ["hlink:plz-out/package"],
 )
