--- a/package/BUILD
+++ b/package/BUILD
@@ -1,7 +1,8 @@
 subinclude("//:version", "//build_defs:archs")
 
 release_files = {
-    "please_pex": "//tools/please_pex:pex_main",
+    "please_pex": "//tools/please_pex",
+    "wheel_resolver": "//tools/wheel_resolver",
 }
 
 def release_file(name:str, file_target:str, arch:str):
