--- a/package/BUILD
+++ b/package/BUILD
@@ -1,17 +1,9 @@
-subinclude("//:version", "//build_defs:archs")
+subinclude("//build_defs:release_file", "//build_defs:archs")
 
 release_files = {
     "please_pex": "//tools/please_pex",
     "wheel_resolver": "//tools/wheel_resolver",
 }
-
-def release_file(name:str, file_target:str, arch:str):
-    return genrule(
-        name = f"{name}_{arch}",
-        srcs = [f"///{arch}" + canonicalise(file_target)],
-        outs = [f"{name}-{VERSION}-{arch}"],
-        cmd = "mv $SRC $OUT",
-    )
 
 filegroup(
     name = "release_files",
