--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Test
+        run: ./pleasew test //test:please_pex_remote_hashes
       - name: Build
         run: ./pleasew build //package:release_files
       - name: Release
