--- a/.plzconfig
+++ b/.plzconfig
@@ -21,14 +21,17 @@ name = python
 [PluginConfig "default_interpreter"]
 ConfigKey = DefaultInterpreter
 DefaultValue = python3
+Inherit = true
 
 [PluginConfig "pex_tool"]
 ConfigKey = PexTool
 DefaultValue = //tools/please_pex
+Inherit = true
 
 [PluginConfig "interpreter_options"]
 ConfigKey = InterpreterOptions
 DefaultValue = ""
+Inherit = true
 
 [PluginConfig "test_runner"]
 ConfigKey = TestRunner
@@ -55,6 +58,7 @@ Optional = true
 ConfigKey = DefaultPipRepo
 DefaultValue = ""
 Optional = true
+Inherit = true
 
 [PluginConfig "use_pypi"]
 ConfigKey = UsePypi
@@ -82,6 +86,7 @@ Repeatable = true
 ConfigKey = WheelTool
 DefaultValue = //tools/wheel_resolver
 Optional = true
+Inherit = true
 
 [featureflags]
 PythonWheelHashing = true
