Revert "Add patch to importlib_metadata target"
This reverts commit 7f39e9b338bc774e40a27f6dd10353690e33a9b2.

--- a/.plzconfig
+++ b/.plzconfig
@@ -90,7 +90,7 @@ Repeatable = true
 
 [PluginConfig "wheel_tool"]
 ConfigKey = WheelTool
-DefaultValue = //tools:wheel_resolver
+DefaultValue = //tools/wheel_resolver
 Optional = true
 Inherit = true
 
