--- a/.plzconfig
+++ b/.plzconfig
@@ -100,6 +100,10 @@ DefaultValue = "#!/usr/bin/python3"
 Optional = true
 Inherit = true
 
+[PluginConfig "portalocker"]
+ConfigKey = Portalocker
+DefaultValue = //third_party/python:portalocker
+
 [featureflags]
 PythonWheelHashing = true
 ExcludePythonRules = true
