--- a/tools/please_pex/BUILD
+++ b/tools/please_pex/BUILD
@@ -1,4 +1,4 @@
-subinclude("//build_defs:python")
+subinclude("//build_defs:python", "///go//build_defs:go")
 
 go_binary(
     name = "please_pex",
