--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [Please]
-Version = >=16.19.0
+Version = 16.20.0-beta.16
 
 [Build]
 hashcheckers = sha256
@@ -7,7 +7,8 @@ hashcheckers = sha256
 [Parse]
 PreloadBuildDefs = test/build_defs/test.build_defs
 
-[Go]
+[Plugin "go"]
+Target = //plugins:go
 ImportPath = github.com/please-build/python-rules
 ; embedtool = //tools/please_go_embed
 gotool = //third_party/go:toolchain|go
@@ -96,3 +97,4 @@ Inherit = true
 PythonWheelHashing = true
 ExcludePythonRules = true
 SingleSHA1Hash = true
+ExcludeGoRules = true
