--- a/.plzconfig
+++ b/.plzconfig
@@ -39,6 +39,10 @@ DefaultValue = unittest
 ConfigKey = TestrunnerDeps
 DefaultValue = //third_party/python:unittest_bootstrap
 
+[PluginConfig "testrunner_bootstrap"]
+ConfigKey = TestrunnerBootstrap
+DefaultValue = //third_party/python:unittest_bootstrap
+
 [PluginConfig "debugger"]
 ConfigKey = Debugger
 DefaultValue = pdb
