--- a/.plzconfig
+++ b/.plzconfig
@@ -39,7 +39,7 @@ DefaultValue = unittest
 ConfigKey = TestrunnerDeps
 DefaultValue = //third_party/python:unittest_bootstrap
 
-[PluginConfig "testrunner_bootstrap"]
+[PluginConfig "test_runner_bootstrap"]
 ConfigKey = TestrunnerBootstrap
 DefaultValue = //third_party/python:unittest_bootstrap
 
