--- a/tools/please_pex_v1/pex/BUILD
+++ b/tools/please_pex_v1/pex/BUILD
@@ -1,9 +1,8 @@
+subinclude("///go//build_defs:go")
+
 go_library(
     name = "pex",
     srcs = ["pex.go"],
     resources = glob(["**/*.py"]),
     visibility = ["//tools/please_pex:all"],
-    deps = [
-        "//tools/please_pex/zip",
-    ],
 )
