--- a/.plzconfig
+++ b/.plzconfig
@@ -66,6 +66,7 @@ Optional = true
 [PluginConfig "use_pypi"]
 ConfigKey = UsePypi
 DefaultValue = true
+Type = bool
 
 [PluginConfig "pip_flags"]
 ConfigKey = PipFlags
@@ -76,6 +77,7 @@ Optional = true
 ConfigKey = DisableVendorFlags
 DefaultValue = false
 Inherit = true
+Type = bool
 
 [PluginConfig "pip_compile_flags"]
 ConfigKey = PipCompileFlags
