--- a/test/custom_runner/custom_runner_package/BUILD
+++ b/test/custom_runner/custom_runner_package/BUILD
@@ -3,7 +3,7 @@ subinclude("//build_defs:python")
 package(
     python = {
         "TEST_RUNNER": "test.custom_runner.runner.run",
-        "TESTRUNNER_DEPS": "//test/custom_runner:runner",
+        "TEST_RUNNER_BOOTSTRAP": "//test/custom_runner:runner",
     },
 )
 
