Migrate old python rules from please repo (#74)
* Copy old rules across

* Add testrunner_bootstrap config key

* Update config variables

* Copy over old pex tool

* Rename new tool to v2

* Remove unused function

* Re-arrange third party deps to minimise changes

* Update tool version

* Get rid of preloads

* Delete v2 rules

* Make bools bools, otherwise flag checks in the build language don't work

* Delete wheel tool and tests referencing deleted zip functions

* Fix testrunner tests

* Update changelog and trigger release from v1 branch

* Update version and changelog in tools directory

--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -24,7 +24,7 @@ jobs:
   release:
     needs: [test]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
