--- a/.plzconfig
+++ b/.plzconfig
@@ -1,10 +1,11 @@
 [Please]
-Version = 16.20.0-beta.16
+Version = 16.21.3
 
 [Build]
 hashcheckers = sha256
 
 [Parse]
+PreloadSubincludes = ///go//build_defs:go
 PreloadBuildDefs = test/build_defs/test.build_defs
 
 [Plugin "go"]
@@ -24,7 +25,7 @@ Inherit = true
 
 [PluginConfig "pex_tool"]
 ConfigKey = PexTool
-DefaultValue = //tools:please_pex
+DefaultValue = //tools/please_pex
 Inherit = true
 
 [PluginConfig "interpreter_options"]
@@ -38,6 +39,10 @@ DefaultValue = unittest
 [PluginConfig "testrunner_deps"]
 ConfigKey = TestrunnerDeps
 DefaultValue = //third_party/python:unittest_bootstrap
+
+[PluginConfig "test_runner_bootstrap"]
+ConfigKey = TestrunnerBootstrap
+DefaultValue = ""
 
 [PluginConfig "debugger"]
 ConfigKey = Debugger
@@ -62,6 +67,7 @@ Optional = true
 [PluginConfig "use_pypi"]
 ConfigKey = UsePypi
 DefaultValue = true
+Type = bool
 
 [PluginConfig "pip_flags"]
 ConfigKey = PipFlags
@@ -72,6 +78,7 @@ Optional = true
 ConfigKey = DisableVendorFlags
 DefaultValue = false
 Inherit = true
+Type = bool
 
 [PluginConfig "pip_compile_flags"]
 ConfigKey = PipCompileFlags
