--- a/tools/please_pex/pex/BUILD
+++ b/tools/please_pex/pex/BUILD
@@ -5,4 +5,7 @@ go_library(
     srcs = ["pex.go"],
     resources = glob(["**/*.py"]),
     visibility = ["//tools/please_pex:all"],
+    deps = [
+        "//tools/please_pex/zip",
+    ],
 )
