Migrate old python rules from please repo (#74)
* Copy old rules across

* Add testrunner_bootstrap config key

* Update config variables

* Copy over old pex tool

* Rename new tool to v2

* Remove unused function

* Re-arrange third party deps to minimise changes

* Update tool version

* Get rid of preloads

* Delete v2 rules

* Make bools bools, otherwise flag checks in the build language don't work

* Delete wheel tool and tests referencing deleted zip functions

* Fix testrunner tests

* Update changelog and trigger release from v1 branch

* Update version and changelog in tools directory

--- a/.plzconfig
+++ b/.plzconfig
@@ -24,7 +24,7 @@ Inherit = true
 
 [PluginConfig "pex_tool"]
 ConfigKey = PexTool
-DefaultValue = //tools:please_pex
+DefaultValue = //tools/please_pex
 Inherit = true
 
 [PluginConfig "interpreter_options"]
@@ -38,6 +38,10 @@ DefaultValue = unittest
 [PluginConfig "testrunner_deps"]
 ConfigKey = TestrunnerDeps
 DefaultValue = //third_party/python:unittest_bootstrap
+
+[PluginConfig "test_runner_bootstrap"]
+ConfigKey = TestrunnerBootstrap
+DefaultValue = ""
 
 [PluginConfig "debugger"]
 ConfigKey = Debugger
@@ -62,6 +66,7 @@ Optional = true
 [PluginConfig "use_pypi"]
 ConfigKey = UsePypi
 DefaultValue = true
+Type = bool
 
 [PluginConfig "pip_flags"]
 ConfigKey = PipFlags
@@ -72,6 +77,7 @@ Optional = true
 ConfigKey = DisableVendorFlags
 DefaultValue = false
 Inherit = true
+Type = bool
 
 [PluginConfig "pip_compile_flags"]
 ConfigKey = PipCompileFlags
