--- a/.plzconfig
+++ b/.plzconfig
@@ -14,6 +14,9 @@ ImportPath = github.com/please-build/python-rules
 gotool = //third_party/go:toolchain|go
 
 
+[Plugin "python"]
+DisableVendorFlags = true
+
 [PluginDefinition]
 name = python
 
