--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -3,13 +3,14 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-    matrix:
-      include:
-        - python-version: '3.7'
-        - python-version: '3.8'
-        - python-version: '3.9'
-        - python-version: '3.10'
-        - python-version: '3.11'
+    strategy:
+      matrix:
+        include:
+          - python-version: '3.7'
+          - python-version: '3.8'
+          - python-version: '3.9'
+          - python-version: '3.10'
+          - python-version: '3.11'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
