--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -4,6 +4,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
           - python-version: '3.7'
