--- a/tools/please_pex/BUILD
+++ b/tools/please_pex/BUILD
@@ -14,34 +14,19 @@ go_binary(
 # onto the binary.
 genrule(
     name = "please_pex",
-    srcs = [
-        ":pex_main",
-        "//third_party/python:six",
-        "//third_party/python:xmlrunner",
-        "//third_party/python:coverage",
-        "//third_party/python:debugpy",
-        "//third_party/python:pytest",
-        "//third_party/python:py",
-        "//third_party/python:pluggy",
-        "//third_party/python:attrs",
-        "//third_party/python:funcsigs",
-        "//third_party/python:more_itertools",
-        "//third_party/python:pkg_resources",
-        "//third_party/python:behave",
-        "//third_party/python:parse",
-        "//third_party/python:parse_type",
-        "//third_party/python:portalocker",
-        "//third_party/python:traceback2",
-        "//third_party/python:enum34",
-        "//third_party/python:win_unicode_console",
-        "//third_party/python:colorama",
-        "//third_party/python:packaging",
-        "//third_party/python:importlib_metadata",
-        "//third_party/python:zipp",
-    ],
+    srcs = {
+        "bootstraps": [
+            "//third_party/python:behave_bootstrap",
+            "//third_party/python:pytest_bootstrap",
+            "//third_party/python:unittest_bootstrap",
+        ],
+        "main": [":pex_main"],
+    },
     outs = ["please_pex"],
     binary = True,
     cmd = [
+        'for i in $SRCS_BOOTSTRAPS; do if echo "$i" | grep -q \'\\.pex$\'; then "$TOOL" x -o . "$i"; rm -f "$i"; fi; done',
+        "rm -f third_party/python/__*_main__.py*",
         # Have to make sure these exist.
         "touch third_party/__init__.py third_party/python/__init__.py",
         "touch tools/__init__.py tools/please_pex/__init__.py",
