--- a/.plzconfig
+++ b/.plzconfig
@@ -1,11 +1,12 @@
 [Please]
-Version = 16.20.0-beta.16
+Version = 17.0.0-beta.1
 
 [Build]
 hashcheckers = sha256
 
 [Parse]
 PreloadBuildDefs = test/build_defs/test.build_defs
+preloadsubincludes = ///shell//build_defs:shell
 
 [Plugin "go"]
 Target = //plugins:go
@@ -97,3 +98,6 @@ Inherit = true
 PythonWheelHashing = true
 ExcludePythonRules = true
 ExcludeGoRules = true
+
+[Plugin "shell"]
+Target = //plugins:shell
