--- a/.plzconfig
+++ b/.plzconfig
@@ -120,6 +120,13 @@ Optional = true
 Inherit = true
 Help = The tool used to resolve wheels with using the pypi API.
 
+[PluginConfig "require_licences"]
+DefaultValue = false
+Type = bool
+Inherit = true
+Help = If set, the licences field on pip_library and python_heel will be mandatory
+
+
 [PluginConfig "feature_flags"]
 DefaultValue = ""
 Repeatable = true
