View debug logs without having to shell via a verbosity variable in .plzconfig (#153)
* Add verbosity option

* Fix typo

--- a/.plzconfig
+++ b/.plzconfig
@@ -130,6 +130,10 @@ Type = bool
 Inherit = true
 Help = If set, the licences field on pip_library and python_wheel will be mandatory
 
+[PluginConfig "verbosity"]
+DefaultValue = "info"
+Help = Passes verbosity level to wheel_tool, for example: wheel_tool --verbosity info
+Optional = true
 
 [PluginConfig "feature_flags"]
 DefaultValue = ""
