--- a/package/BUILD
+++ b/package/BUILD
@@ -2,6 +2,7 @@ subinclude("//tools:version", "//build_defs:archs", "///go//build_defs:go")
 
 release_files = {
     "please_pex": "//tools/please_pex",
+    "wheel_resolver": "//tools/wheel_resolver",
 }
 
 def release_file(name:str, file_target:str, arch:str):
